--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^15.3.2",
     "react-addons-pure-render-mixin": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-mounter": "^1.2.0"
+    "react-mounter": "^1.2.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0"
   }
 }
